--- a/asv/index.html
+++ b/asv/index.html
@@ -217,21 +217,21 @@
                 <div class="py-10 grid grid-cols-3">
                     <div class="w-96 text-center bg-gray-800 rounded-xl px-10 py-5">
                         <img class="w-96" src="./image-post.jpeg" height="500">
-                        <h1 class="text-white text-2xl text-bold">Thambi Paithiyama</h1>
+                        <h1 class="text-white text-2xl text-bold">Typography Example</h1>
                         <h2 class="text-gray-500 text-m">Feb 14 2050 </h2>
                         <p class="text-gray-300">Lorem ipsum Dolor sit Amet consecutur adipisiong
                                 eliot.Tenetur Vero esse non molestias failure is stepping stones for success told by gp muthu </p>
                     </div>
                     <div class="w-96 text-center bg-gray-800 rounded-xl px-10 py-5">
                         <img class="w-96" src="./image-post2.jpeg" height="700">
-                        <h1 class="text-white text-2xl text-bold">Thambi maduraiya</h1>
+                        <h1 class="text-white text-2xl text-bold">Idea Contents steps</h1>
                         <h2 class="text-gray-500 text-m">April 27 2024 </h2>
                         <p class="text-gray-300">Lorem ipsum Dolor sit Amet consecutur adipisiong
                                 eliot.Tenetur Vero esse non molestias failure is stepping stones for success told by gp muthu.life is circle told by vijay anna </p>
                     </div>
                     <div class="w-96 text-center bg-gray-800 rounded-xl px-10 py-5">
                         <img class="w-96" src="./image-post3.jpeg" height="500">
-                        <h1 class="text-white text-2xl text-bold">Thambi Pongal</h1>
+                        <h1 class="text-white text-2xl text-bold">4th Lorem ipsum dolor sit</h1>
                         <h2 class="text-gray-500 text-m">Jan 14 2005 </h2>
                         <p class="text-gray-300">Lorem ipsum Dolor sit Amet consecutur adipisiong
                                 eliot.Tenetur Vero esse non molestias failure is stepping stones for success told by gp muthu </p>
