--- a/asv/code.html
+++ b/asv/code.html
@@ -185,13 +185,13 @@
                 </div> 
                 <div>
                 <div class="flex gap-3">
-                    <h1 class="text-white text-2xl font-semibold">Project-2</h1>
+                    <h1 class="text-white text-2xl font-semibold">Project-3</h1>
                     <button class="bg-green-400 rounded-xl px-2 py-1 font-semibold">Next.js</button>
                     <button class="bg-pink-400 rounded-xl px-2 py-1 font-semibold">blog</button>
                     <button class="bg-red-400 rounded-xl px-2 py-1 font-semibold">Javascript</button>
                     <button class="bg-blue-500 rounded-xl px-2 py-1 font-semibold">TypeScript</button>
                 </div>
-                <p class="text-white py-2">It is a natural and necessary process.although it is another process.failure is another steeping stones of life.we should never give up and try our best until the last time of life</p>
+                <p class="text-white py-2">It is a natural and necessary process.although it is another process.failure is another stepping stones of life.we should never give up and try our best until the last time of life</p>
             </div>
         </div>
             <div class="flex py-5 gap-10 items-center bg-gray-700 mt-5 rounded-2xl">
